build-errors.txt
error[E0277]: the trait bound `PathBuf: FromSql` is not satisfied
   --> crates/ottrin-search/src/db.rs:73:27
    |
 73 |                 path: row.get(0)?,
    |                           ^^^ the trait `FromSql` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `FromSql`:
              Arc<str>
              Box<str>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
              NonZero<isize>
              NonZero<u16>
            and 23 others
note: required by a bound in `Row::<'stmt>::get`
   --> /home/campbell/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rusqlite-0.31.0/src/row.rs:285:32
    |
285 |     pub fn get<I: RowIndex, T: FromSql>(&self, idx: I) -> Result<T> {
    |                                ^^^^^^^ required by this bound in `Row::<'stmt>::get`

error[E0277]: the trait bound `PathBuf: FromSql` is not satisfied
   --> crates/ottrin-search/src/db.rs:74:34
    |
 74 |                 parent_path: row.get(1)?,
    |                                  ^^^ the trait `FromSql` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `FromSql`:
              Arc<str>
              Box<str>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
              NonZero<isize>
              NonZero<u16>
            and 23 others
note: required by a bound in `Row::<'stmt>::get`
   --> /home/campbell/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/rusqlite-0.31.0/src/row.rs:285:32
    |
285 |     pub fn get<I: RowIndex, T: FromSql>(&self, idx: I) -> Result<T> {
    |                                ^^^^^^^ required by this bound in `Row::<'stmt>::get`

error[E0277]: the trait bound `PathBuf: ToSql` is not satisfied
   --> crates/ottrin-search/src/db.rs:123:30
    |
123 |                   stmt.execute(params![
    |  ______________________________^
124 | |                     item.path,
125 | |                     item.parent_path,
126 | |                     item.name,
...   |
131 | |                     item.symlink_target_is_dir.map(|v| if v { 1 } else { 0 }),
132 | |                 ])?;
    | |_________________^ the trait `ToSql` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `ToSql`:
              &T
              Arc<T>
              Box<T>
              Cow<'_, T>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
            and 29 others
    = note: required for the cast from `&PathBuf` to `&dyn ToSql`
    = note: this error originates in the macro `params` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PathBuf: ToSql` is not satisfied
   --> crates/ottrin-search/src/db.rs:170:30
    |
170 |                   stmt.execute(params![
    |  ______________________________^
171 | |                     item.path,
172 | |                     item.parent_path,
173 | |                     item.name,
...   |
178 | |                     item.symlink_target_is_dir.map(|v| if v { 1 } else { 0 }),
179 | |                 ])?;
    | |_________________^ the trait `ToSql` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `ToSql`:
              &T
              Arc<T>
              Box<T>
              Cow<'_, T>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
            and 29 others
    = note: required for the cast from `&PathBuf` to `&dyn ToSql`
    = note: this error originates in the macro `params` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `PathBuf: ToSql` is not satisfied
   --> crates/ottrin-search/src/db.rs:198:13
    |
198 | /             params![
199 | |                 item.path,
200 | |                 item.parent_path,
201 | |                 item.name,
...   |
206 | |                 item.symlink_target_is_dir.map(|v| if v { 1 } else { 0 }),
207 | |             ],
    | |_____________^ the trait `ToSql` is not implemented for `PathBuf`
    |
    = help: the following other types implement trait `ToSql`:
              &T
              Arc<T>
              Box<T>
              Cow<'_, T>
              NonZero<i16>
              NonZero<i32>
              NonZero<i64>
              NonZero<i8>
            and 29 others
    = note: required for the cast from `&PathBuf` to `&dyn ToSql`
    = note: this error originates in the macro `params` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0382]: borrow of moved value: `db_writer`
   --> crates/ottrin-search/src/lib.rs:293:51
    |
248 |                         let mut db_writer = SearchDbWriter::open(search_db_path()).ok();
    |                             ------------- move occurs because `db_writer` has type `Option<SearchDbWriter>`, which does not implement the `Copy` trait
...
265 |                             move |batch| {
    |                             ------------ value moved into closure here
...
268 |                                 if let Some(writer) = db_writer.as_mut() {
    |                                                       --------- variable moved due to use in closure
...
293 |                             if let Some(writer) = db_writer.as_mut() {
    |                                                   ^^^^^^^^^ value borrowed here after move

error[E0382]: borrow of moved value: `new_items`
   --> crates/ottrin-search/src/lib.rs:309:58
    |
247 |                         let mut new_items: Vec<SearchResultItem> = Vec::new();
    |                             ------------- move occurs because `new_items` has type `Vec<SearchResultItem>`, which does not implement the `Copy` trait
...
265 |                             move |batch| {
    |                             ------------ value moved into closure here
...
285 |                                 new_items.extend(batch);
    |                                 --------- variable moved due to use in closure
...
309 |                                 i.items = std::mem::take(&mut new_items);
    |                                                          ^^^^^^^^^^^^^^ value borrowed here after move
    |
help: consider cloning the value before moving it into the closure
    |
254 ~                         let value = new_items.clone();
255 ~                         match build_index(
256 |                             &cfg,
...
285 |                                 i.last_progress_unix_secs = Some(current_unix_secs());
286 ~                                 value.extend(batch);
    |

Some errors have detailed explanations: E0277, E0382.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `ottrin-search` (lib) due to 7 previous errors
